--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "nodemon": "^1.18.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.6",
     "react-scripts": "1.0.12"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"cd ../NodeJS_project && nodemon npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:1337"
 }
