--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "1.0.12"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"cd ../NodeJS_project && nodemon npm start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
